# smelt

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  signal.yml
assets/: AppIcon.icns
crates/smelt/: Cargo.toml
crates/smelt-acp-view/: Cargo.toml
crates/smelt-acp-view/src/: acp_view.rs  lib.rs
crates/smelt-bridge/: Cargo.toml
crates/smelt-bridge/src/: dc.rs  gateway.rs  main.rs  rtc.rs  signal.rs
crates/smelt-core/: Cargo.toml
crates/smelt-core/src/: acp_conn.rs  acp_session.rs  agent_kind.rs  agent_status.rs  block_on.rs  claude_paths.rs  daemon_state.rs  font_config.rs  lib.rs  login_env.rs  remote_gateway.rs  workspace_override.rs
crates/smelt-signal/: Cargo.toml
crates/smelt-signal/src/: main.rs  protocol.rs  spa.rs  state.rs  turn_rest.rs  ws.rs
crates/smelt-ui/: Cargo.toml
crates/smelt-ui/src/: agent_ui_config.rs  daemon_states_global.rs  lib.rs  markdown_mermaid.rs  ui_theme.rs
crates/smelt/src/: acp.rs  acp_completion.rs  acp_view.rs  agent.rs  claude_memory.rs  dock.rs  file_tree.rs  git_log.rs  git_log_view.rs  git_panel.rs  hotspot.rs  inspector.rs  json_store.rs  main.rs  markdown_mermaid.rs  mem_usage.rs  pet.rs  session_history.rs  session_list.rs  settings.rs  skills.rs  stage.rs  status_bar.rs  status_item.rs  tasks.rs  terminal.rs  terminal_view.rs  toast.rs  ui_theme.rs  updater.rs  usage_stats.rs
crates/smeltd/: Cargo.toml
crates/smeltd/src/: acp_registry.rs  main.rs
deploy/signal/: Caddyfile  Dockerfile  README.md  WEB-CONSOLE.md  coturn.md  install-coturn.sh  rotate-turn-credential.sh  smelt-signal.env.example  smelt-signal.service  turnserver.conf.example
docs/: collaboration.md  local-tasks.md  project-report.md  remote-ops-roadmap.md  roadmap.md  state-channel-plan.md  terminal-rendering-gaps.md  webrtc-edge.md  workspace.md
docs/superpowers/specs/: 2026-07-24-acp-lifecycle-hardening-design.md
remote-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
remote-web/src/: api.ts  app.tsx  main.tsx  styles.css
remote-web/src/components/: ChoiceSheet.tsx  CliPanel.tsx  Composer.tsx  StatusBadge.tsx  XtermSurface.tsx
remote-web/src/lib/: parseChoiceMenu.ts  serializeScreen.ts
remote-web/src/pages/: ListPage.tsx
remote-web/src/transport/: TransportContext.tsx  frames.ts  index.ts  rtc-backend.ts  rtc-peer.ts  signaling.ts  types.ts
scripts/: dmg-settings.py  make-dmg-bg.py  make-icon.sh  package-mac.sh  setup-codesign-identity.sh
src/: db.rs  digest.rs  main.rs  merge.rs  observe.rs  osc.rs  permission_menu.rs  remote_gateway.rs  remote_gateway_console_page.html  remote_gateway_list_page.html  remote_gateway_page.html  render.rs  term_text.rs
website/: package.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/components/: CodeSnippet.tsx  CopyButton.tsx  DocsCTA.tsx  DocsSidebar.tsx  FeatureComparison.tsx  Features.tsx  Footer.tsx  Hero.tsx  Integrations.tsx  Nav.tsx  Syntax.tsx  TerminalWindow.tsx  icons.tsx  mdComponents.tsx
website/app/docs/: page.tsx
website/content/: develop.md  docs.md
