[package]
name = "smelt"
version = "0.1.0"
edition = "2021"

# 老版 objc 0.2 的 msg_send!/class! 宏展开带 cfg(feature="cargo-clippy")，新 Rust 的
# check-cfg 会刷 unexpected_cfgs 警告；宏来自依赖无法改，这里整包放行。
[lints.rust]
unexpected_cfgs = { level = "allow" }

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
notify = "6"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
qrcode = "0.14"
# GPUI + gpui-component（组件库，Apache-2.0）。三者锁到 gpui-component 用的同一个
# zed commit，避免版本漂移；gpui_platform 开 runtime_shaders 免装完整 Xcode。
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# 组件库自带图标资源（Sidebar 等组件的 IconName 需要注册它才能渲染 svg）。
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
# 内嵌终端：portable-pty 起 shell 子进程并拿到 PTY，alacritty_terminal 做
# 终端状态机（ANSI 解析 + 网格模型），GPUI 负责把网格渲染出来。
portable-pty = "0.9"
alacritty_terminal = { version = "0.26", default-features = false }
smol = "2"  # 定时器：驱动终端网格的定时快照重绘
# 文件查看器语法高亮：内置几十种语言语法+主题，用 fancy-regex 纯 Rust 免装 onig(C)。
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
# diff 行内高亮：对配对的删/增行做字符级 diff，标出具体变化的片段。
similar = "2"

# macOS：桌面宠物浮窗需要绕过 GPUI（它在 mac 上只会建 Titled 窗口，必带圆角边框+
# 阴影），直接操作底层 NSWindow 改成 Borderless/无阴影/透明。版本对齐 gpui 依赖树。
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
raw-window-handle = "0.6"
