# 虚拟 workspace：所有代码住 crates/ 下，根不再有 package。
# - crates/smelt-core   —— GUI 与守护共用的无 UI 逻辑（不许引 GPUI）
# - crates/smeltd       —— 守护侧三个二进制（smeltd / gateway / smelt-notify）
# - crates/smelt        —— GUI 主程序（bin 名 smelt，与产品名统一）
[workspace]
members = [
    "crates/smelt-core",
    "crates/smeltd",
    "crates/smelt",
    "crates/smelt-signal",
    "crates/smelt-bridge",
]
resolver = "3"

# 版本号唯一真源：发版只改这里（scripts/package-mac.sh 与 release CI 都
# grep 本文件的 '^version' 行做校验），各成员 version.workspace = true 继承。
[workspace.package]
version = "0.5.7"
edition = "2024"

# 老版 objc 0.2 的 msg_send!/class! 宏展开带 cfg(feature="cargo-clippy")，新 Rust 的
# check-cfg 会刷 unexpected_cfgs 警告；宏来自依赖无法改，这里整体放行。
[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }
