[package]
name = "smelt-bridge"
version.workspace = true
edition.workspace = true
description = "Mac 跨网桥：连公网信令 + WebRTC DataChannel + 本机 remote_gateway"

[[bin]]
name = "smelt-bridge"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
bytes = "1"
webrtc = "0.12"
url = "2"
