[package]
name = "smelt-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# GUI（workspace）与守护（smeltd/gateway）共用的无 UI 逻辑：终端文本提取、OSC 通知
# 扫描、权限菜单解析、远程网关。这里绝不引 GPUI——守护侧的编译速度靠这条底线。

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
alacritty_terminal = { version = "0.26", default-features = false }
axum = { version = "0.8.9", features = ["ws"] }
# ACP 对话共享模型（acp_chat）里的逐行 diff 计算，GPUI 和 smelt 都用同一个算法。
similar = "2"
# 把 remote-web/dist 编进 smeltd/gateway：Docker 只拷二进制、无 Resources 时手机端仍有 SPA。
# debug-embed：debug 构建也编进二进制（默认 debug 会回读磁盘，Docker 镜像里没有 dist 就挂）。
rust-embed = { version = "8.7", features = ["debug-embed"] }
# ACP 连接层（acp_conn）：JSON-RPC over stdio 连子进程 agent，不含 GPUI，为
# smeltd 未来托管 ACP 会话铺路（见 acp_conn.rs 文件头）。
agent-client-protocol = { version = "=1.3.0", features = ["unstable_elicitation"] }
smol = "2"
