[package]
name = "smelt-signal"
version.workspace = true
edition.workspace = true
description = "WebRTC 信令服务：房间 + SDP/ICE 转发，不碰 PTY（docs/webrtc-edge.md）"

[[bin]]
name = "smelt-signal"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
dashmap = "6"
futures-util = "0.3"
base64 = "0.22"
# coturn REST API 临时 TURN 凭证（use-auth-secret 模式）：HMAC-SHA1 是协议本身
# 定的算法，不是我们选的降级。
hmac = "0.12"
sha1 = "0.10"
# 公网信令同域托管 remote-web SPA（跨网手机只打开 signal 域名）
rust-embed = { version = "8.7", features = ["debug-embed"] }

[build-dependencies]
# build.rs 无额外依赖
